[tool.poetry]
name = "dial-gui"
version = "0.9a0"
description = "A node-based GUI for Deep Learning tasks"
authors = ["David Afonso <davafons@gmail.com>"]

license = "GPL-3.0-only"

readme = "README.md"

repository = "https://github.com/dial-app/dial-gui"
homepage = "https://github.com/dial-app/dial-gui"

[tool.poetry.dependencies]
python = ">=3.6, <3.8"
dial-core = ">=0.16a0"

tensorflow = "2.0.0b1"
PySide2 = "^5.12.6"
qimage2ndarray = "^1.8.3"
dependency-injector = "^3.15.6"
nbconvert = "^5.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.4"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
pylint = "^2.4.4"
mypy = "^0.761"
tox = "^3.14.5"
docstr-coverage = "^1.0.5"
taskipy = "^1.1.3"
pytest-qt = "^3.3.0"
mkdocs = "^1.1"

[tool.taskipy.tasks]
dial = "python -m dial_gui -d"
lint = "pre-commit run --all"
tests = "pytest --cov=dial_gui/ --cov-report term-missing:skip-covered"
doc-coverage = "docstr-coverage -fi dial_core"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12", "setuptools>=35.0.2", "wheel>=0.29.0"]
build-backend = "poetry.masonry.api"
